## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = lsp12_0.vqh lsp12_1.vqh lsp30_0.vqh lsp30_1.vqh lsp9_0.vqh\
	lsp9_1.vqh res0_128_1024_1.vqh res0_128_1024_2.vqh res0_128_1024_3.vqh\
	res0_128_1024_4.vqh res0_128_1024_5.vqh res0_128_1024_6.vqh\
	res0_128_1024_7.vqh res0_128_1024_8.vqh res0_128_1024_9.vqh\
	res0_128_1024aux.vqh res0_128_128_1.vqh res0_128_128_2.vqh\
	res0_128_128_3.vqh res0_128_128_4.vqh res0_128_128_5.vqh\
	res0_128_128aux.vqh res0_160_1024_1.vqh res0_160_1024_2.vqh\
	res0_160_1024_3.vqh res0_160_1024_4.vqh res0_160_1024_5.vqh\
	res0_160_1024_6.vqh res0_160_1024_7.vqh res0_160_1024_8.vqh\
	res0_160_1024_9.vqh res0_160_1024aux.vqh res0_160_128_1.vqh\
	res0_160_128_2.vqh res0_160_128_3.vqh res0_160_128_4.vqh\
	res0_160_128_5.vqh res0_160_128aux.vqh res0_192_1024_1.vqh\
	res0_192_1024_2.vqh res0_192_1024_3.vqh res0_192_1024_4.vqh\
	res0_192_1024_5.vqh res0_192_1024_6.vqh res0_192_1024_7.vqh\
	res0_192_1024_8.vqh res0_192_1024_9.vqh res0_192_1024aux.vqh\
	res0_192_128_1.vqh res0_192_128_2.vqh res0_192_128_3.vqh\
	res0_192_128_4.vqh res0_192_128_5.vqh res0_192_128aux.vqh\
	res0_256_1024_1.vqh res0_256_1024_2.vqh res0_256_1024_3.vqh\
	res0_256_1024_4.vqh res0_256_1024_5.vqh res0_256_1024_6.vqh\
	res0_256_1024_7.vqh res0_256_1024aux.vqh res0_256_128_1.vqh\
	res0_256_128_2.vqh res0_256_128_3.vqh res0_256_128_4.vqh\
	res0_256_128_5.vqh res0_256_128aux.vqh res0_96_1024_1.vqh\
	res0_96_1024_2.vqh res0_96_1024_3.vqh res0_96_1024_4.vqh\
	res0_96_1024_5.vqh res0_96_1024_6.vqh res0_96_1024_7.vqh\
	res0_96_1024_8.vqh res0_96_1024_9.vqh res0_96_1024aux.vqh\
	res0_96_128_1.vqh res0_96_128_2.vqh res0_96_128_3.vqh\
	res0_96_128_4.vqh res0_96_128_5.vqh res0_96_128aux.vqh\
	res0_350_1024_7.vqh

