## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

EXTRA_DIST =   line_1024x31_0sub0.vqh line_1024x31_0sub1.vqh line_1024x31_1sub0.vqh line_1024x31_1sub1.vqh line_1024x31_2sub1.vqh line_1024x31_2sub2.vqh line_1024x31_2sub3.vqh line_1024x31_3sub1.vqh line_1024x31_3sub2.vqh line_1024x31_3sub3.vqh line_1024x31_class0.vqh line_1024x31_class1.vqh line_1024x31_class2.vqh line_1024x31_class3.vqh line_128x7_0sub0.vqh line_128x7_1sub1.vqh line_128x7_1sub2.vqh line_128x7_1sub3.vqh line_128x7_2sub1.vqh line_128x7_2sub2.vqh line_128x7_2sub3.vqh line_128x7_class1.vqh line_128x7_class2.vqh lsp12_0.vqh lsp12_1.vqh lsp30_0.vqh lsp30_1.vqh lsp9_0.vqh lsp9_1.vqh res_Zc_1024aux.vqh res_Zc_128aux.vqh res_Zc_1.vqh res_Zc_2.vqh res_Zc_3.vqh res_Zc_4.vqh res_Zc_5.vqh res_Zc_6.vqh res_Zc_7.vqh res_Zc_8.vqh res_Zc_9a.vqh res_Zc_9b.vqh res_Zc_9.vqh
