## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

EXTRA_DIST =  maskadj_A.h maskadj_X.h maskadj_Z.h mode_44c_A.h mode_44c_B.h mode_44c_C.h mode_44c_X.h mode_44c_Y.h mode_44c_Z.h mode_AA.h mode_A.h mode_B.h mode_C.h mode_D.h mode_E.h modes.h mode_Za.h mode_Zb.h mode_Zc.h
