## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = maskadj_A.h maskadj_X.h maskadj_Z.h mode_22c_Z.h mode_32c_Z.h mode_44_A.h mode_44_B.h mode_44c_A.h mode_44c_B.h mode_44c_C.h mode_44c_D.h mode_44c_E.h mode_44_C.h mode_44c_X.h mode_44c_Y.h mode_44c_Z.h mode_44_X.h mode_44_Y.h mode_44_Z.h modes.h

