## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = line_1024x31_0sub0.vqh line_1024x31_0sub1.vqh\
	line_1024x31_1sub0.vqh line_1024x31_1sub1.vqh line_1024x31_2sub1.vqh\
	line_1024x31_2sub2.vqh line_1024x31_2sub3.vqh line_1024x31_3sub1.vqh\
	line_1024x31_3sub2.vqh line_1024x31_3sub3.vqh line_1024x31_class0.vqh\
	line_1024x31_class1.vqh line_1024x31_class2.vqh line_1024x31_class3.vqh\
	line_128x19_0sub0.vqh line_128x19_1sub1.vqh line_128x19_1sub2.vqh\
	line_128x19_1sub3.vqh line_128x19_2sub1.vqh line_128x19_2sub2.vqh\
	line_128x19_2sub3.vqh line_128x19_class1.vqh line_128x19_class2.vqh\
	line_128x7_0sub0.vqh line_128x7_1sub1.vqh line_128x7_1sub2.vqh\
	line_128x7_1sub3.vqh line_128x7_2sub1.vqh line_128x7_2sub2.vqh\
	line_128x7_2sub3.vqh line_128x7_class1.vqh line_128x7_class2.vqh\
	line_128x9_0sub0.vqh line_128x9_1sub1.vqh line_128x9_1sub2.vqh\
	line_128x9_1sub3.vqh line_128x9_2sub1.vqh line_128x9_2sub2.vqh\
	line_128x9_2sub3.vqh line_128x9_class1.vqh line_128x9_class2.vqh
