## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = _44u0_p0_r0.vqh _44u0_p0_r1.vqh _44u0_p1_0.vqh\
	_44u0_p1_r0.vqh _44u0_p1_r1.vqh _44u0_p2_0.vqh _44u0_p3_0.vqh\
	_44u0_p4_0.vqh _44u0_p4_1.vqh _44u0_p5_0.vqh\
	_44u0_p6_0.vqh _44u0_p7_0.vqh _44u0_p7_1.vqh\
	_44u0_p7_2.vqh _44u4_p0_r0.vqh _44u4_p0_r1.vqh\
	_44u4_p1_0.vqh _44u4_p1_r0.vqh _44u4_p1_r1.vqh\
	_44u4_p2_0.vqh _44u4_p3_0.vqh _44u4_p4_0.vqh\
	_44u4_p5_0.vqh _44u4_p6_0.vqh _44u4_p7_0.vqh\
	_44u4_p7_1.vqh _44u4_p8_0.vqh _44u4_p8_1.vqh\
	_44u4_p9_0.vqh _44u4_p9_1.vqh _44u4_p9_2.vqh\
	_44u7_p0_r0.vqh _44u7_p0_r1.vqh _44u7_p1_0.vqh\
	_44u7_p1_r0.vqh _44u7_p1_r1.vqh _44u7_p2_0.vqh\
	_44u7_p2_1.vqh _44u7_p3_0.vqh _44u7_p4_0.vqh\
	_44u7_p5_0.vqh _44u7_p6_0.vqh _44u7_p7_0.vqh\
	_44u7_p7_1.vqh _44u7_p8_0.vqh _44u7_p8_1.vqh\
	_44u7_p9_0.vqh _44u7_p9_1.vqh _44u7_p9_2.vqh
